New update file format

--- a/update.ini
+++ b/update.ini
@@ -2,7 +2,7 @@
 
 Plugin: YellowSkipto
 Version: 0.6.4
-Author: Steffen Schultz
+Developer: Steffen Schultz
 
-system/plugins/skipto.php: skipto.php,create,update
-system/plugins/SkipTo.min.js: SkipTo.min.js,create,update
+YellowSkipto/skipto.php: system/plugins/skipto.php,create,update
+YellowSkipto/SkipTo.min.js: system/plugins/SkipTo.min.js,create,update
