Possible release fix

--- a/update.ini
+++ b/update.ini
@@ -2,6 +2,7 @@
 
 Plugin: YellowSkipto
 Version: 0.6.4
+Published: 2018-07-21 14:14:35
 Developer: Steffen Schultz
 
 YellowSkipto/skipto.php: system/plugins/skipto.php,create,update
